[gd_scene load_steps=4 format=3 uid="uid://o4gr4mwg8vpn"]

[ext_resource type="Script" uid="uid://dr7dsyckxiq7k" path="res://Scripts/game_over.gd" id="1_ojehl"]
[ext_resource type="PackedScene" uid="uid://bvatwirfi8vd7" path="res://Scenes/restart_button.tscn" id="2_ek8ke"]
[ext_resource type="PackedScene" uid="uid://1i6pshotldet" path="res://Scenes/quit_button.tscn" id="3_eoghk"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ojehl")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.941176)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 72
text = "GAME OVER"

[node name="ScoreLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "New High Score!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="RestartButton" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer" instance=ExtResource("2_ek8ke")]
unique_name_in_owner = true
layout_mode = 2

[node name="QuitButton" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer" instance=ExtResource("3_eoghk")]
unique_name_in_owner = true
layout_mode = 2
